Ensure correct effective zoom when zoom is applied.

This fixes a bug where the application of 'zoom' would be ignored, because:
the effective zoom was reset in preparation of applying the zoom, yet we
did not apply the zoom if the incoming value was equal the current value.

This means if you apply the same zoom value twice to the same element,
the effective zoom of that element becomes the parent's effective zoom.

This patch fixes this by setting the effective zoom from the style resolver
directly, instead of doing it inside ComputedStyle::SetZoom and _hoping_
that ComputedStyle::EffectiveZoom() currently returns the right value.

Note:  The 'state.SetZoom(1.0f)'-ery is there to maintain the behavior
       in which the effective zoom becomes the parent's zoom whenever
       zoom:0[%] is used.

Note2: The return value of ComputedStyle::SetZoom is probably not
       interesting anymore. In fact, 'zoom' could probably be
       de-specialized. (Separate patch).

R=dominicc@chromium.org, futhark@chromium.org

Bug: 807503
Change-Id: I50cb7c1116da463fa59b745d2d31ef942be9085b
Reviewed-on: https://chromium-review.googlesource.com/1054075
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Anders Ruud <andruud@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558246}
Former-commit-id: d947162ed2175e3a226b18fbe2dc5dabbb228c34