third_party/blink/renderer/core/css/resolver/style_resolver.cc
@@ -1036,6 +1036,7 @@ scoped_refptr<ComputedStyle> StyleResolver::InitialStyleForElement(
                                                            : EOrder::kLogical);
   initial_style->SetZoom(frame && !document.Printing() ? frame->PageZoomFactor()
                                                        : 1);
+  initial_style->SetEffectiveZoom(initial_style->Zoom());
 
   FontDescription document_font_description =
       initial_style->GetFontDescription();
